[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pydra-fsl"
version = "0.0.20"
description = "Pydra tasks for FSL"
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
keywords = ["pydra", "neuroimaging", "fsl"]
authors = [
  { name = "Nipype developers", email = "neuroimaging@python.org" },
  { name = "Ghislain Vaillant", email = "ghislain.vaillant@icm-institute.org" },
]
maintainers = [
  { name = "Nipype developers", email = "neuroimaging@python.org" },
  { name = "Ghislain Vaillant", email = "ghislain.vaillant@icm-institute.org" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black", "pre-commit"]
doc = [
  "packaging",
  "sphinx >=2.1.2",
  "sphinx_rtd_theme",
  "sphinxcontrib-apidoc ~=0.3.0",
  "sphinxcontrib-napoleon",
  "sphinxcontrib-versioning",
]
test = [
  "nipype2pydra",
  "pytest >= 4.4.0",
  "pytest-cov",
  "pytest-env",
  "pytest-xdist",
  "pytest-rerunfailures",
  "codecov",
  "fileformats-extras",
  "fileformats-datascience-extras",
  "fileformats-medimage-extras",
  "fileformats-medimage-fsl-extras",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pydra/tasks/fsl/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["pydra"]
include-only = ["pydra/tasks/fsl"]

[tool.black]
target-version = ["py38"]
exclude = "_version.py"

[tool.codespell]
ignore-words = ".codespell-ignorewords"

[tool.flake8]
doctests = true
per-file-ignores = ["__init__.py:F401,F403"]
max-line-length = 88
select = "C,E,F,W,B,B950"
extend-ignore = ['E203', 'E501', 'E129', 'W503']

[project.urls]
Documentation = "https://github.com/nipype/pydra-tasks-fsl#readme"
Issues = "https://github.com/nipype/pydra-tasks-fsl/issues"
Source = "https://github.com/nipype/pydra-tasks-fsl"

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
# addopts = ["--doctest-modules", "--doctest-continue-on-failure"]
testpaths = ["pydra"]
