[DEFAULT]
subpackage = TODO

[metadata]
author = TODO
author_email = TODO
description = TODO

[options]
python_requires = >=3.7
install_requires =
    pydra >= 0.6.1

test_requires =
    pytest >= 4.4.0
    pytest-cov
    pytest-env
    pytest-xdist
    pytest-rerunfailures
    codecov

packages = pydra/tasks/%(subpackage)s

[options.extras_require]
doc =
    packaging
    sphinx >= 2.1.2
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
test =
    pytest >= 4.4.0
    pytest-cov
    pytest-env
    pytest-xdist
    pytest-rerunfailures
    codecov
tests =
    %(test)s
dev =
    %(test)s
    black
    pre-commit
all =
    %(doc)s
    %(dev)s

[versioneer]
VCS = git
style = pep440
versionfile_source = pydra/tasks/%(subpackage)s/_version.py
versionfile_build = pydra/tasks/%(subpackage)s/_version.py
tag_prefix =
parentdir_prefix =
