[metadata]
author = Nipype Developers
author_email = neuroimaging@python.org
description = FSL tasks for the Pydra dataflow engine

[options]
python_requires = >=3.7
install_requires =
    pydra

packages = find:

[versioneer]
VCS = git
style = pep440
versionfile_source = pydra/tasks/fsl/_version.py
versionfile_build = pydra/tasks/fsl/_version.py
tag_prefix =
parentdir_prefix =
