[DEFAULT]
subpackage = fsl

[metadata]
author = Nipype Developers
author_email = neuroimaging@python.org
description = FSL tasks for the Pydra dataflow engine

[options]
python_requires = >=3.7
install_requires =
    pydra >= 0.14.1

packages = pydra.tasks.%(subpackage)s

[options.extras_require]
doc =
    packaging
    sphinx >= 2.1.2
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
test =
    pytest >= 4.4.0
    pytest-cov
    codecov
tests =
    %(test)s
dev =
    %(test)s
    nipype
    black
    pyyaml
all =
    %(doc)s
    %(dev)s

[versioneer]
VCS = git
style = pep440
versionfile_source = pydra/tasks/%(subpackage)s/_version.py
versionfile_build = pydra/tasks/%(subpackage)s/_version.py
tag_prefix =
parentdir_prefix =
